<resources>
    <string name="app_name">Kalfi</string>
    <string name="new_cow">Sapi Baru</string>
    <string name="cow_male">Induk Jantan</string>
    <string name="cow_female">Induk Betina</string>
    <string name="nama_sapi">Nama Sapi</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="berat_sapi">Berat Sapi</string>
    <string name="tambah">Tambah</string>
    <string name="unggah_foto">Unggah Foto</string>
    <string name="spesies">Spesies Sapi</string>
    <string name="ubah">Ubah data</string>
    <string name="hapus">Hapus data</string>
    <string name="id">ID</string>
    <string name="nama_user">Nama</string>
    <string name="no_hp">Nomor Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="ubah_gambar">Ganti foto</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="tambah_sapi">Tambah Sapi</string>
    <string name="pilih">Pilih Sapi</string>
    <string name="akan">Yang Akan Diinseminasi</string>
    <string name="cariInse">Nama Inseminator</string>
    <string name="cari">Cari</string>
    <string name="listInse">List Inseminator</string>
    <string-array name="cow_weight">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_profile_edit">ProfileEditActivity</string>

</resources>
