<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:orientation="vertical"
    tools:context=".ObserveCowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/WarnaTopNav"
        android:orientation="horizontal"
        >


        <ImageButton
            android:id="@+id/btnSideNewCow"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:background="?android:selectableItemBackground"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            app:srcCompat="@drawable/back_arrow"
            android:scaleType="centerInside"
            tools:ignore="ContentDescription"
            />

        <ImageView
            android:id="@+id/LogoNewCow"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logotext"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/WarnaBawahTopNav"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBackNewCow"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:background="?android:selectableItemBackground"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/back_arrow"
            tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:textSize="15pt"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="10dp"
            android:text="@string/new_cow"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fotoSapi"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:paddingLeft="20dp"
            android:layout_weight="2"
            android:layout_height="200dp"
            app:srcCompat="@drawable/sapi"
            tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleNamaSapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:paddingLeft="10dp"
                android:text="@string/nama_sapi"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textNamaSapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:background="@color/White"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/titleBeratSapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:paddingLeft="10dp"
                android:text="@string/berat_sapi"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textBeratSapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:background="@color/White"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/titleLahirSapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:paddingLeft="10dp"
                android:text="@string/tanggal_lahir"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textLahirSapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:background="@color/White"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/titleSpesiesSapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:paddingLeft="10dp"
                android:text="@string/spesies"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textSpesiesSapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:background="@color/White"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/jantanLihat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:paddingLeft="20dp"
                android:text="@string/cow_male"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageView
                android:id="@+id/fotoJantan"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:paddingLeft="20dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/sapi"
                tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry"
                />

            <TextView
                android:id="@+id/spcsJantan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:paddingLeft="30dp"
                android:text="@string/spesies"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textJantan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
                android:background="@color/White"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:background="@color/unggahFoto"
                android:text="@string/ubah"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/betinaLihat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:paddingLeft="10dp"
                android:text="@string/cow_female"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageView
                android:id="@+id/fotoBetina"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/sapi"
                tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry"
                />

            <TextView
                android:id="@+id/spcsBetina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:paddingLeft="10dp"
                android:text="@string/spesies"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textBetina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="7pt"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:background="@color/White"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btnHapus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/hapusData"
                android:text="@string/hapus"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>